--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Odin - Recipes</title>
 </head>
 <body>
-    
+    <h1>RECIPES : </h1>
+    <a href = "./recipes/carrotcake.html"> Carrot Cake </a>   
 </body>
 </html>
