Update Recipe for Carrot Cake

--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -5,6 +5,57 @@
     <title>Carrot-Cake</title>
 </head>
 <body>
-   <h1>CARROT CAKE RECIPE</h1> 
+    <h1>CARROT CAKE RECIPE</h1> 
+    <img src = "../images/carrotcake.jpeg" alt = "CARROT CAKE">
+
+    <h3>DESCRIPTION</h3>
+    <p>       
+        This is a carrot cake which we bake after following the recipe.
+        It certainly has a great texture, the pastry cream is very good, 
+        and it is made with love.
+    </p> 
+   
+    <h3>INGREDIENTS</h3>
+    <ul>
+        <li>4 eggs</li>
+        <li>310 ml oil</li>
+        <li>1 tbsp vanilla extract</li>
+        <li>330g caster sugar</li>
+        <li>300g self-rising flour</li>
+        <li>2 tbsp sodium bicarbonate</li>
+        <li>100g walnuts, chopped</li>
+        <li>3 medium carrots, grated coarsely</li>
+    </ul>
+
+    <h3>STEPS</h3>
+    <ol>
+        <li>
+            <p>
+                Preheat oven to 180°C. Grease and line base of tin of your choice (see notes). 
+                Whisk eggs, oil and vanilla in a jug until combined. 
+                Sift sugar, flour, bicarbonate of soda, cinnamon and 1/2 teaspoon 
+                salt into a bowl. Add oil mixture, walnuts and carrots, and stir to combine. 
+                Spoon into prepared tin, then bake on lowest shelf of oven for specified 
+                time (see notes) or until skewer inserted into the centre comes out clean. 
+                Cool cake in tin, then turn on to a wire rack.
+            </p>
+        </li>
+        <li>
+            <p>
+                Meanwhile, for the icing, usuing an electric mixer, beat butter until light 
+                and fluffy. Add cream cheese and continue to beat until light and fluffy. 
+                Gradually add icing sugar mixture, then add lemon rind and juice and beat 
+                until well combined.
+            </p>
+        </li>
+        <li>
+            <p>
+                Using a serrated knife, cut cake in half horizontally. Spread 1/3 the
+                icing over base, then sandwich with top. 
+                Spread remaining icing over top. 
+                Serve.
+            </p>
+    </ol>
+
 </body>
 </html>
