Update Recipe for carrotcake

--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -25,6 +25,7 @@
         <li>2 tbsp sodium bicarbonate</li>
         <li>100g walnuts, chopped</li>
         <li>3 medium carrots, grated coarsely</li>
+        <li>Creme en Glaisse</li>
     </ul>
 
     <h3>STEPS</h3>
