Update recipe for carrotcake

--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -26,6 +26,7 @@
         <li>100g walnuts, chopped</li>
         <li>3 medium carrots, grated coarsely</li>
         <li>Creme en Glaisse</li>
+        <li>Whipped cream or Pastry Cream</li>
     </ul>
 
     <h3>STEPS</h3>
