Update recipe for carrotcake

--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -55,7 +55,7 @@
                 Using a serrated knife, cut cake in half horizontally. Spread 1/3 the
                 icing over base, then sandwich with top. 
                 Spread remaining icing over top. 
-                Serve.
+                Serve, and enjoy!
             </p>
     </ol>
 
