Add new recipe, Lasagna in a new web page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>RECIPES : </h1>
-    <a href = "./recipes/carrotcake.html"> Carrot Cake </a>   
+    <a href = "./recipes/carrotcake.html"> Carrot Cake </a> <br>   
+    <a href = "./recipes/lasagna.html"> Lasagna </a> <br>
+    <a href = "./recipes/cottagecheese.html"> Cottage Cheese </a>
 </body>
 </html>
