Add new recipe cottage cheese

--- a/recipes/cottagecheese.html
+++ b/recipes/cottagecheese.html
@@ -2,61 +2,115 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">    
-    <title>Carrot-Cake</title>
+    <title>Cottage Cheese</title>
 </head>
 <body>
-    <h1>CARROT CAKE RECIPE</h1> 
-    <img src = "../images/carrotcake.jpeg" alt = "CARROT CAKE">
+    <h1>COTTAGE CHEESE RECIPE</h1> 
+    <img src = "../images/cottagecheese.png" alt = "COTTAGE CHEESE">
 
     <h3>DESCRIPTION</h3>
     <p>       
-        This is a carrot cake which we bake after following the recipe.
-        It certainly has a great texture, the pastry cream is very good, 
-        and it is made with love.
+        The process for making Cottage Cheese involves good dairy bacteria converting lactose to lactic acid. 
+        After the bacteria culture activity begins, the milk acidity increases until the milk coagulates into 
+        a solid curd that can be cut into small cubes. The curd is then cooked to release moisture, then the 
+        curd is chilled to make cottage cheese. Cream can be added to the finished cheese to increase the 
+        richness and texture.
     </p> 
    
     <h3>INGREDIENTS</h3>
     <ul>
-        <li>4 eggs</li>
-        <li>310 ml oil</li>
-        <li>1 tbsp vanilla extract</li>
-        <li>330g caster sugar</li>
-        <li>300g self-rising flour</li>
-        <li>2 tbsp sodium bicarbonate</li>
-        <li>100g walnuts, chopped</li>
-        <li>3 medium carrots, grated coarsely</li>
-        <li>Creme en Glaisse</li>
-        <li>Whipped cream or Pastry Cream</li>
+        <li>Milk (dairy)</li>
+        <li>Couple of Lemons/Vinegar/Liquid Rennet</li>
+        <li>Cheesecloth</li>        
     </ul>
 
     <h3>STEPS</h3>
     <ol>
         <li>
             <p>
-                Preheat oven to 180°C. Grease and line base of tin of your choice (see notes). 
-                Whisk eggs, oil and vanilla in a jug until combined. 
-                Sift sugar, flour, bicarbonate of soda, cinnamon and 1/2 teaspoon 
-                salt into a bowl. Add oil mixture, walnuts and carrots, and stir to combine. 
-                Spoon into prepared tin, then bake on lowest shelf of oven for specified 
-                time (see notes) or until skewer inserted into the centre comes out clean. 
-                Cool cake in tin, then turn on to a wire rack.
+                Begin by heating the milk to 86°F (30°C). I do this by placing the gallon of milk in a pot 
+                or sink of very warm water. If you do this in a pot on the stove make sure you heat the 
+                milk slowly and stir it well as it heats. Once the milk is at 86°F the culture can be added. 
+                I do this by sprinkling the powder over the surface of the milk and then allow about 2 minutes 
+                for the powder to re-hydrate before stirring it in.
             </p>
         </li>
         <li>
             <p>
-                Meanwhile, for the icing, usuing an electric mixer, beat butter until light 
-                and fluffy. Add cream cheese and continue to beat until light and fluffy. 
-                Gradually add icing sugar mixture, then add lemon rind and juice and beat 
-                until well combined.
+                Next add about 8-10 drops of single strength liquid rennet. The milk now needs to sit quiet 
+                for 5-8 hours while the culture works and the curd forms. The thermal mass of this milk should 
+                keep it warm but during colder months wrapping this in a thick blanket or towel will keep the 
+                temperature up. It is OK if the temp drops a few degrees during this time. When the curd is ready 
+                you will notice that it shrinks away from the sides of the pan a bit and that you may see a thin 
+                layer of whey on the top. You may even notice some cracks forming on the surface.
             </p>
         </li>
         <li>
             <p>
-                Using a serrated knife, cut cake in half horizontally. Spread 1/3 the
-                icing over base, then sandwich with top. 
-                Spread remaining icing over top. 
-                Serve, and enjoy!
+                Now it is time to cut the curds. Begin by making parallel cuts about 1/2 -3/4 inches apart. 
+                Then turn the pot 90 degrees and repeat ending with a checkerboard of cuts on the surface. 
+                Then with your spoon or ladle cut these crosswise until you have a pot full of curd cubes. 
+                Be gentle at this point because the curd will be very soft. Once the curds are cut, stir 
+                them gently for 10 minutes. You should note more whey being released.
             </p>
+        </li>
+
+        <li>
+            <p>
+                Now it is time to begin drying out the curds. This will be done by increasing the heat 
+                slowly to 113-115°F (45-46°C). The heat needs to be increased slowly at about 2-3°F 
+                (1°C) every 5 minutes. The total cooking time will be 60-90 minutes and may be extended 
+                to 2 hrs if the curds are still soft. The final curds should be cooked well through and 
+                should be examined to make sure that enough moisture has been removed. A broken curd 
+                should be firm throughout and the curds should have a moderate resistance when pressed 
+                between the fingers.
+            </p>
+        </li>
+
+        <li>
+            <p>
+                The dry curds can now be transferred to a colander lined with butter muslin. They should 
+                be allowed to drain for 30 minutes and a gentle stirring will make sure that the whey 
+                drains off. Once the curds drain for a short time the cloth can be gathered, tied securely 
+                and hung for the final drainage. This can be done for several hours and even overnight, 
+                depending on how dry you want the final cheese.
+            </p>
+        </li>
+
+        <li>
+            <p>
+                The curds now need to be chilled and separated. I do this by filling the pot with cold 
+                water and submerging the curds in its cloth bundle in the cold water (this makes it 
+                easier to drain them again). Separate the curds well while in the cold water. 
+                This will drop the temperature of the curds to about 60°F (15.5°C). 
+                Then drain the curds again. Repeat this again but with ice water and allow the curds 
+                to remain in the water for 30 minutes while separating the curds.curds are cut, stir 
+                them gently for 10 minutes. You should note more whey being released.
+            </p>
+        </li>
+
+        <li>
+            <p>
+                Allow the curds to drain well in a colander. You may notice that the finished curds 
+                have consolidated somewhat but they are easy to separate. You can now add a bit of 
+                salt to suit your preference (about 1/4-1/2 tsp should do). Sprinkle this over the 
+                surface evenly then mix into the curds well. Salt is not really needed here for the 
+                process because the final acidity is enough to stop the bacteria from working. So if 
+                you are looking for salt free, this is a good cheese for you. Adding herbs or spice 
+                is a great alternative to augment the flavor in a salt-free cheese.Your Cheese is now 
+                ready for storage but you can make any additions you like by adding fresh herbs, 
+                spices, etc.
+            </p>
+        </li>
+
+        <li>
+            <p>
+                You can now sit back and enjoy your very own dish of Cottage Cheese or just pack it into
+                a sanitized container for the fridge. That's it, time for lunch and for me to enjoy a 
+                fresh batch of Cottage Cheese with chives and cream added. Yum!
+            </p>
+        </li>
+
     </ol>
 
 </body>
