Add CSS to the project

--- a/recipes/carrotcake.html
+++ b/recipes/carrotcake.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">    
     <title>Carrot-Cake</title>
+    <link rel = "stylesheet" href = "../styles.css">
 </head>
 <body>
     <h1>CARROT CAKE RECIPE</h1> 
-    <img src = "../images/carrotcake.jpeg" alt = "CARROT CAKE">
+    <img class = "image" src = "../images/carrotcake.jpeg" alt = "CARROT CAKE">
 
     <h3>DESCRIPTION</h3>
     <p>       
