--- a/recipes/cottagecheese.html
+++ b/recipes/cottagecheese.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">    
     <title>Cottage Cheese</title>
+    <link rel = "stylesheet" href = "../styles.css">
 </head>
 <body>
     <h1>COTTAGE CHEESE RECIPE</h1> 
-    <img src = "../images/cottagecheese.png" alt = "COTTAGE CHEESE">
+    <img  class = "image" src = "../images/cottagecheese.png" alt = "COTTAGE CHEESE">
 
     <h3>DESCRIPTION</h3>
     <p>       
