--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">    
     <title>Lasagna</title>
+    <link rel = "stylesheet" href = "../styles.css">
 </head>
 <body>
     <h1>LASAGNA RECIPE</h1> 
-    <img src = "../images/lasagna.jpeg" alt = "LASAGNA">
+    <img class = "image" src = "../images/lasagna.jpeg" alt = "LASAGNA">
 
     <h3>DESCRIPTION</h3>
     <p>       
